# epaper-palette-dither

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  main.py  pyproject.toml
scriptable/: 4ColorDither.js  EPaperPaletteDither.js  README.md  build.py
scriptable/src/: app.html  color.js  dithering.js  gamut-mapping.js  lightness-remap.js  scriptable-entry.js
scriptable/tests/: generate-vectors.py  test-runner.html  test-vectors.json
src/epaper_palette_dither/: __init__.py  __main__.py
src/epaper_palette_dither/application/: dither_service.py  image_converter.py  optimizer_service.py  reconvert_service.py
src/epaper_palette_dither/domain/: color.py  dithering.py  image_model.py
src/epaper_palette_dither/infrastructure/: color_space.py  dither_lut.py  gamut_mapping.py  image_io.py  image_metrics.py  inverse_gamut_mapping.py  lightness_remap.py
src/epaper_palette_dither/presentation/: controls.py  image_viewer.py  main_window.py  styles.py
src/four_color_dither/: __init__.py  __main__.py
src/four_color_dither/application/: dither_service.py  image_converter.py
src/four_color_dither/domain/: dithering.py
src/four_color_dither/infrastructure/: gamut_mapping.py
src/four_color_dither/presentation/: controls.py  main_window.py
tests/application/: test_dither_service.py  test_optimizer_service.py  test_reconvert_service.py
tests/domain/: test_color.py  test_dithering.py
tests/infrastructure/: test_color_space.py  test_gamut_mapping.py  test_image_io.py  test_image_metrics.py  test_inverse_gamut_mapping.py  test_lightness_remap.py
