[project]
name = "4color-dither"
version = "0.1.0"
description = "4-color dithering tool for E-Ink displays (black, white, red, yellow)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "pillow>=12.1.0",
    "pyqt6>=6.10.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
]
